; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_acpi_pad.c_acpi_pad_rrtime_store.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_acpi_pad.c_acpi_pad_rrtime_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }

@EINVAL = common dso_local global i64 0, align 8
@isolated_cpus_lock = common dso_local global i32 0, align 4
@round_robin_time = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device*, %struct.device_attribute*, i8*, i64)* @acpi_pad_rrtime_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @acpi_pad_rrtime_store(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.device*, align 8
  %7 = alloca %struct.device_attribute*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %6, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = call i64 @strict_strtoul(i8* %11, i32 0, i64* %10)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %4
  %15 = load i64, i64* @EINVAL, align 8
  %16 = sub i64 0, %15
  store i64 %16, i64* %5, align 8
  br label %31

17:                                               ; preds = %4
  %18 = load i64, i64* %10, align 8
  %19 = icmp ult i64 %18, 1
  br i1 %19, label %23, label %20

20:                                               ; preds = %17
  %21 = load i64, i64* %10, align 8
  %22 = icmp uge i64 %21, 100
  br i1 %22, label %23, label %26

23:                                               ; preds = %20, %17
  %24 = load i64, i64* @EINVAL, align 8
  %25 = sub i64 0, %24
  store i64 %25, i64* %5, align 8
  br label %31

26:                                               ; preds = %20
  %27 = call i32 @mutex_lock(i32* @isolated_cpus_lock)
  %28 = load i64, i64* %10, align 8
  store i64 %28, i64* @round_robin_time, align 8
  %29 = call i32 @mutex_unlock(i32* @isolated_cpus_lock)
  %30 = load i64, i64* %9, align 8
  store i64 %30, i64* %5, align 8
  br label %31

31:                                               ; preds = %26, %23, %14
  %32 = load i64, i64* %5, align 8
  ret i64 %32
}

declare dso_local i64 @strict_strtoul(i8*, i32, i64*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
